# contact-info-parser

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
parser/: crawler.py  extractor.py  parser.py  url_handler.py
parser/utils/: config.py  export.py  logger.py
