[project]
name = "contact-info-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramazan Kaban",email = "ram.and.rem207@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "phonenumbers (>=9.0.22,<10.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
